# yapp

./: .gitignore  CMakeLists.txt  README.md  TODO.md  runner.py  test.xpp  test.yapp  yappsrc.sh
examples/fluidsim/: main.yapp  semiworking.backup  so_close.backup
oldsrc/: decl_utils.yapp.cpp  decl_utils.yapp.h  file_writer.cpp  file_writer.yapp.cpp  file_writer.yapp.h  main.cpp  main.yapp.cpp  main.yapp.h  std.io.yapp.cpp  std.io.yapp.h  std.main.function.yapp.cpp  std.main.function.yapp.h  std.main.yapp.cpp  std.main.yapp.h  std.result.yapp.cpp  std.result.yapp.h  std.str.yapp.cpp  std.str.yapp.h  std.stream.yapp.cpp  std.stream.yapp.h  std.vec.yapp.cpp  std.vec.yapp.h  visitor.cpp  visitor.yapp.cpp  visitor.yapp.h
src/: decl_utils.cpp  decl_utils.h  decl_utils.yapp  file_writer.cpp  file_writer.h  file_writer.yapp  main.cpp  main.yapp  visitor.cpp  visitor.h  visitor.yapp
srcyapp/: decl_utils.yapp  file_writer.yapp  main.yapp  visitor.yapp
stdlib/: _result.yapp  io.yapp  std.alg.yapp  std.fs.yapp  std.io.yapp  std.main.function.yapp  std.main.yapp  std.map.yapp  std.math.yapp  std.regex.yapp  std.result.yapp  std.set.yapp  std.str.yapp  std.stream.yapp  std.vec.yapp  str.yapp
test/: advanced_cpp.tapp  edge_cases.tapp  externc.tapp  import.tapp  stdlib_passthrough.tapp  syntax_cpp.tapp  test1.tapp  test1.xppt  visibility_pubpriv.tapp  yapp_check.tapp
test/C/: edge_cases.tapp  enums_unions.tapp  externc_header.tapp  externc_ignored.tapp  functions.tapp  globals.tapp  macros_includes.tapp  structs.tapp
test/CXX/: templates_basic.tapp  templates_in_namespace.tapp  templates_instantiation.tapp  templates_specialization.tapp  templates_visibility.tapp  using_decl.tapp  using_namespace.tapp
test/stdlib/: stdio.tapp
test/yapplib/: result.tapp  stdio.tapp
